Revision history for {{$dist->name}}

{{$NEXT}}
  - Update NetBSD to skip modules that do not install there

2.36      2022-10-25 10:18:52 -0600
  - Update some Perl prereq skips
  - Added Memcached::RateLimit
  - Added Test2::Tools::Rustfmt
  - Updated my dists to latest

2.35      2022-10-20 18:48:30 -0600
  - Added Acme::Color::Rust
  - Added Exception::FFI::ErrorCode
  - Added Test2::Tools::MemoryCycle
  - Added Alien::Build::Plugin::Download::GitLab
  - Updated my dists to latest
  - Setting TASK_BELIKE_PLICEASE_NOWASM to true will
    skip Wasm dependencies

2.34      2022-09-05 22:33:51 -0600
  - Added App::tarweb
  - Added Plack::App::Libarchive
  - Added Plack::App::GitHubPages::Faux
  - Updated my dists to latest

2.33      2022-08-28 12:39:37 -0600
  - Added Alien::Build::Plugin::Fetch::HostAllowList
  - Added Alien::Build::Plugin::Fetch::HostBlockList

2.32      2022-08-26 20:30:32 -0600
  - Enable Wasm on Linux Arm64
  - Updated my dists to latest

2.31      2022-02-18 19:07:58 -0700
  - Remove some skips on macOS that appear to be working
  - Updated my dists to latest

2.30      2022-01-22 03:44:41 -0700
  - Added Dist::Zilla::Plugin::Meta::Dynamic::Config
  - Added Dist::Zilla::Plugin::PPPort
  - Added MooseX::Types::JSON
  - Updated my dists to latest

2.29      2021-11-15 07:56:13 -0700
  - Updated my dists to latest
  - Remove deprecated Test::CChecker

2.28      2021-11-14 08:47:58 -0700
  - Updated my dists to latest
  - Do not try to install Win32::Vcpkg on anything but 64 bit intel Linux
  - Added Return::MultiLevel
  - Added Dist::Zilla::MintingProfile::FFI
  - Added Task::FFIDev
  - Added Dist::Zilla::MintingProfile::AlienBuild
  - Added Task::ALienDev

2.27      2021-08-30 16:45:03 -0600
  - Updated my dists to latest

2.26      2021-08-05 06:10:59 -0600
  - Added Dist::Zilla::Plugin::ArchiveTar
  - Added Dist::Zilla::Plugin::Libarchive
  - Added Eval::LineNumbers
  - Added File::BaseDir
  - Added File::XDG
  - Remove App::Ack