@@ -15,25 +15,25 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 2.6500
-Acme::Alien::DontPanic2                        = 2.6500
-Acme::Color::Rust                              = 0.04
-Acme::Ford::Prefect                            = 2.6500
-Acme::Ford::Prefect2                           = 2.6500
-Acme::Ford::Prefect::FFI                       = 2.6500
-Acme::Ford::Prefect2::FFI                      = 2.6500
+Acme::Alien::DontPanic                         = 2.7200
+Acme::Alien::DontPanic2                        = 2.7200
+Acme::Color::Rust                              = 0.05
+Acme::Ford::Prefect                            = 2.7200
+Acme::Ford::Prefect2                           = 2.7200
+Acme::Ford::Prefect::FFI                       = 2.7200
+Acme::Ford::Prefect2::FFI                      = 2.7200
 Alien                                          = 0.96
 Alien::Alien                                   = 0.02
-Alien::autoconf                                = 0.18
+Alien::autoconf                                = 0.19
 Alien::automake                                = 0.18
 Alien::Autotools                               = 1.08
 Alien::Base::ModuleBuild                       = 1.17
 Alien::bison                                   = 0.22
-Alien::Build                                   = 2.71
+Alien::Build                                   = 2.80
 Alien::Build::Git                              = 0.10
 Alien::Build::MB                               = 0.09
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
-Alien::Build::Plugin::Download::GitHub         = 0.09
+Alien::Build::Plugin::Download::GitHub         = 0.10
 Alien::Build::Plugin::Download::GitLab         = 0.01
 Alien::Build::Plugin::Extract::Libarchive      = 0.02
 Alien::Build::Plugin::Fetch::Cache             = 0.05
@@ -47,7 +47,7 @@ Alien::castxml                                 = 0.02
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.12
 Alien::cmake3                                  = 0.08
-Alien::curl                                    = 0.10
+Alien::curl                                    = 0.11
 Alien::Editline                                = 0.10
 Alien::Expat                                   = 0.04
 Alien::FFI                                     = 0.27
@@ -56,7 +56,7 @@ Alien::ghostunnel                              = 0.01
 Alien::gmake                                   = 0.24
 Alien::GMP                                     = 1.16
 Alien::GSL                                     = 1.07
-Alien::gzip                                    = 0.06
+Alien::gzip                                    = 0.07
 Alien::help2man                                = 0.01
 Alien::Hunspell                                = 0.17
 Alien::Libarchive3                             = 0.33
@@ -80,7 +80,7 @@ Alien::pkgconf                                 = 0.19
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.08
 Alien::unzip                                   = 0.03
-Alien::wasmtime                                = 0.16
+Alien::wasmtime                                = 0.17
 Alien::xz                                      = 0.08
 ;Alt::Alien::cmake::System                     = 0.0502
 ;Alt::Alien::FFI::System                       = 0.21
@@ -89,8 +89,8 @@ Alien::xz                                      = 0.08
 AnyEvent::Finger                               = 0.14
 AnyEvent::FTP                                  = 0.19
 AnyEvent::Ident                                = 0.08
-AnyEvent::Open3::Simple                        = 0.87
-AnyEvent::WebSocket::Client                    = 0.54
+AnyEvent::Open3::Simple                        = 0.88
+AnyEvent::WebSocket::Client                    = 0.55
 App::af                                        = 0.18
 App::cpangitify                                = 0.20
 App::plasm                                     = 0.03
@@ -129,24 +129,25 @@ Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.72
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.75
 Env::ShellWords                                = 0.02
 Eval::LineNumbers                              = 0.35
 Exception::Class::DBI                          = 1.04
 Exception::FFI::ErrorCode                      = 0.03
 FFI                                            = 1.15
-FFI::C                                         = 0.12
+FFI::C                                         = 0.15
 FFI::C::Stat                                   = 0.02
 FFI::CheckLib                                  = 0.31
 FFI::ExtractSymbols                            = 0.07
-FFI::Platypus                                  = 2.02
+FFI::Platypus                                  = 2.08
 FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.06
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
-FFI::Platypus::Lang::Fortran                   = 0.12
-FFI::Platypus::Lang::Go                        = 0.01
-FFI::Platypus::Lang::Pascal                    = 0.09
-FFI::Platypus::Lang::Rust                      = 0.10
+FFI::Platypus::Lang::Fortran                   = 0.14
+FFI::Platypus::Lang::Go                        = 0.02
+FFI::Platypus::Lang::Pascal                    = 0.11
+FFI::Platypus::Lang::Rust                      = 0.16
+FFI::Platypus::Lang::Zig                       = 0.01
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
 FFI::Platypus::Type::Enum                      = 0.06
@@ -163,8 +164,8 @@ File::Which                                    = 1.27
 File::XDG                                      = 1.02
 Kafka::Librd                                   = 0.20
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
-Log::Log4perl::Appender::TAP                   = 0.04
-Memcached::RateLimit                           = 0.02
+Log::Log4perl::Appender::TAP                   = 0.05
+Memcached::RateLimit                           = 0.09
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.62
 MooseX::Types::JSON                            = 1.01
@@ -200,14 +201,14 @@ Test2::Tools::HTTP::UA::Mojo                   = 0.05
 Test2::Tools::JSON::Pointer                    = 0.02
 Test2::Tools::MemoryCycle                      = 0.01
 Test2::Tools::PerlCritic                       = 0.04
-Test2::Tools::Process                          = 0.06
-Test2::Tools::Rustfmt                          = 0.02
+Test2::Tools::Process                          = 0.07
+Test2::Tools::Rustfmt                          = 0.05
 Test2::Tools::URL                              = 0.06
 Text::HumanComputerWords                       = 0.04
 Text::Hunspell::FFI                            = 0.04
 URI::ws                                        = 0.03
-UUID::FFI                                      = 0.10
-Wasm                                           = 0.21
+UUID::FFI                                      = 0.11
+Wasm                                           = 0.23
 Win32::ErrorMode                               = 0.07
 Win32::Getppid                                 = 0.06
 Win32::Process::Info                           = 1.023
