@@ -144,6 +144,7 @@ $modules{$_} = $_ for qw(
   FFI::Platypus::Lang::Go
   FFI::Platypus::Lang::Pascal
   FFI::Platypus::Lang::Rust
+  FFI::Platypus::Lang::Zig
   FFI::Platypus::Legacy::Raw
   FFI::Platypus::Record::StringArray
   FFI::Platypus::Type::Enum
